# cloud-curl

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  config.rs  main.rs  request.rs  settings.rs
src/aws/: config.rs  credentials.rs  mod.rs  signing.rs
tests/: main.tf
tests/modules/elasticsearch/: main.tf  variables.tf
