[package]
name = "cloud-curl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sigv4 = "0.54.1"
clap = { version = "4.1.13", features = ["derive"] }
futures = "0.3.27"
http      = "0.2.9"
hyper = { version = "0.14.25", features = ["client", "http2", "tcp"] }
hyper-openssl = "0.9.2"
once_cell = "1.17.1"
reqwest = "0.11.15"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["rt", "full"] }
toml = "0.7.3"
